add the driver for Ivensense IDG2000 Gyro sensor
Change-Id: I346336e1619bb61b4074b83caa4322c0e474e203

--- a/drivers/Makefile
+++ b/drivers/Makefile
@@ -112,3 +112,4 @@ obj-$(CONFIG_STAGING)		+= staging/
 obj-y				+= platform/
 obj-y				+= ieee802154/
 obj-$(CONFIG_SENSORS_MMA7455L)		+= gsensor/
+obj-$(CONFIG_SENSORS_IDG2000)		+= gyro/
