--- a/drivers/Kconfig
+++ b/drivers/Kconfig
@@ -115,4 +115,6 @@ source "drivers/staging/Kconfig"
 source "drivers/platform/Kconfig"
 
 source "drivers/gsensor/Kconfig"
+
+source "drivers/gyro/Kconfig"
 endmenu
