Fix Makefile for sound
Change-Id: I56f9f998a712bdceba1135059994693f6df0b3e1

--- a/sound/soc/ambarella/Makefile
+++ b/sound/soc/ambarella/Makefile
@@ -17,6 +17,6 @@ obj-$(CONFIG_IPCAM_BOARD)		+= snd-soc-ipcam.o
 obj-$(CONFIG_A2SBUB_BOARD)		+= snd-soc-a2sbub.o
 obj-$(CONFIG_A2SIPCAM_BOARD)		+= snd-soc-a2sipcam.o
 obj-$(CONFIG_COCONUT_BOARD)		+= snd-soc-coconut.o
-obj-$(CONFIG_COCONUT_BOARD)		+= snd-soc-durian.o
+obj-$(CONFIG_DURIAN_BOARD)		+= snd-soc-durian.o
 obj-$(CONFIG_AMBARELLA_DUMMY_BOARD)	+= snd-soc-dummy.o
 
