change PWM proc default to y, because current pwm sys is too slow
Change-Id: Iee4a4fa9ba1d0b7a7314c98ac8bcca3246f8a989

--- a/arch/arm/configs/ambarella_a5s_defconfig
+++ b/arch/arm/configs/ambarella_a5s_defconfig
@@ -208,7 +208,7 @@ CONFIG_AMBARELLA_SUPPORT_CLOCKSOURCE=y
 #
 # CONFIG_AMBARELLA_GPIO_PROC is not set
 # CONFIG_AMBARELLA_ADC_PROC is not set
-# CONFIG_AMBARELLA_PWM_PROC is not set
+CONFIG_AMBARELLA_PWM_PROC=y
 # CONFIG_AMBARELLA_DMA_PROC is not set
 CONFIG_AMBARELLA_PLL_PROC=y
 
