--- a/arch/arm/configs/ambarella_i1_arm11_defconfig
+++ b/arch/arm/configs/ambarella_i1_arm11_defconfig
@@ -277,10 +277,10 @@ CONFIG_AMBARELLA_PLL_PROC=y
 # PPM Configuration
 #
 CONFIG_AMBARELLA_PPM_SIZE=0x00200000
-CONFIG_AMBARELLA_ZRELADDR=0xC0208000
+CONFIG_AMBARELLA_ZRELADDR=0x00208000
 CONFIG_AMBARELLA_TEXTOFS=0x00008000
-CONFIG_AMBARELLA_PARAMS_PHYS=0xC0201000
-CONFIG_AMBARELLA_INITRD_PHYS=0xC0A00000
+CONFIG_AMBARELLA_PARAMS_PHYS=0x00201000
+CONFIG_AMBARELLA_INITRD_PHYS=0x00A00000
 CONFIG_AMBARELLA_TIMER_HZ=100
 
 #
@@ -332,7 +332,7 @@ CONFIG_CPU_HAS_PMU=y
 # Kernel Features
 #
 CONFIG_TICK_ONESHOT=y
-CONFIG_NO_HZ=y
+# CONFIG_NO_HZ is not set
 CONFIG_HIGH_RES_TIMERS=y
 CONFIG_GENERIC_CLOCKEVENTS_BUILD=y
 CONFIG_VMSPLIT_3G=y
@@ -681,7 +681,7 @@ CONFIG_PHYLIB=m
 # CONFIG_SMSC_PHY is not set
 # CONFIG_BROADCOM_PHY is not set
 # CONFIG_ICPLUS_PHY is not set
-# CONFIG_REALTEK_PHY is not set
+CONFIG_REALTEK_PHY=m
 # CONFIG_NATIONAL_PHY is not set
 # CONFIG_STE10XP is not set
 # CONFIG_LSI_ET1011C_PHY is not set
@@ -787,10 +787,10 @@ CONFIG_INPUT_TOUCHSCREEN=y
 # CONFIG_TOUCHSCREEN_TOUCHWIN is not set
 # CONFIG_TOUCHSCREEN_TOUCHIT213 is not set
 # CONFIG_TOUCHSCREEN_TSC2007 is not set
-CONFIG_TOUCHSCREEN_AK4183=m
+# CONFIG_TOUCHSCREEN_AK4183 is not set
 # CONFIG_TOUCHSCREEN_CY8CTMG is not set
-CONFIG_TOUCHSCREEN_CHACHA_MT4D=m
-# CONFIG_TOUCHSCREEN_TM1510 is not set
+# CONFIG_TOUCHSCREEN_CHACHA_MT4D is not set
+CONFIG_TOUCHSCREEN_TM1510=m
 # CONFIG_TOUCHSCREEN_TPS6507X is not set
 CONFIG_INPUT_MISC=y
 # CONFIG_INPUT_AD714X is not set
@@ -848,16 +848,11 @@ CONFIG_HW_RANDOM=y
 # CONFIG_RAW_DRIVER is not set
 # CONFIG_TCG_TPM is not set
 # CONFIG_RAMOOPS is not set
-CONFIG_I2C=y
+CONFIG_I2C=m
 CONFIG_I2C_BOARDINFO=y
 # CONFIG_I2C_COMPAT is not set
 CONFIG_I2C_CHARDEV=m
-CONFIG_I2C_MUX=m
-
-#
-# Multiplexer I2C Chip support
-#
-# CONFIG_I2C_MUX_PCA954x is not set
+# CONFIG_I2C_MUX is not set
 # CONFIG_I2C_HELPER_AUTO is not set
 # CONFIG_I2C_SMBUS is not set
 
@@ -875,7 +870,7 @@ CONFIG_I2C_MUX=m
 #
 # I2C system bus drivers (mostly embedded / system-on-chip)
 #
-CONFIG_I2C_AMBARELLA=y
+CONFIG_I2C_AMBARELLA=m
 # CONFIG_I2C_GPIO is not set
 # CONFIG_I2C_OCORES is not set
 # CONFIG_I2C_PCA_PLATFORM is not set
@@ -903,7 +898,7 @@ CONFIG_SPI_MASTER=y
 #
 # CONFIG_SPI_BITBANG is not set
 # CONFIG_SPI_GPIO is not set
-CONFIG_SPI_AMBARELLA=y
+CONFIG_SPI_AMBARELLA=m
 # CONFIG_SPI_XILINX is not set
 # CONFIG_SPI_DESIGNWARE is not set
 
@@ -931,10 +926,8 @@ CONFIG_GPIO_SYSFS=y
 #
 # CONFIG_GPIO_MAX7300 is not set
 # CONFIG_GPIO_MAX732X is not set
-CONFIG_GPIO_PCA953X=y
-# CONFIG_GPIO_PCA953X_IRQ is not set
+# CONFIG_GPIO_PCA953X is not set
 # CONFIG_GPIO_PCF857X is not set
-# CONFIG_GPIO_SX150X is not set
 # CONFIG_GPIO_ADP5588 is not set
 
 #
@@ -966,7 +959,7 @@ CONFIG_WATCHDOG=y
 # Watchdog Device Drivers
 #
 # CONFIG_SOFT_WATCHDOG is not set
-CONFIG_AMBARELLA_WATCHDOG=y
+CONFIG_AMBARELLA_WATCHDOG=m
 # CONFIG_MAX63XX_WATCHDOG is not set
 CONFIG_SSB_POSSIBLE=y
 
@@ -1070,10 +1063,7 @@ CONFIG_MMC_AMBARELLA=m
 # CONFIG_NEW_LEDS is not set
 # CONFIG_ACCESSIBILITY is not set
 CONFIG_RTC_LIB=y
-CONFIG_RTC_CLASS=y
-CONFIG_RTC_HCTOSYS=y
-CONFIG_RTC_HCTOSYS_DEVICE="rtc0"
-# CONFIG_RTC_DEBUG is not set
+CONFIG_RTC_CLASS=m
 
 #
 # RTC interfaces
@@ -1137,7 +1127,7 @@ CONFIG_RTC_INTF_DEV_UIE_EMUL=y
 #
 # on-CPU RTC drivers
 #
-CONFIG_RTC_DRV_AMBARELLA=y
+CONFIG_RTC_DRV_AMBARELLA=m
 # CONFIG_DMADEVICES is not set
 # CONFIG_AUXDISPLAY is not set
 # CONFIG_UIO is not set
