Do not use GENERIC_LOCKBREAK and inline spin lock
Change-Id: I42b72c425504fcc8f1dec1e68165bb8907c65fe4
Signed-off-by: Anthony Ginger <hfjiang@ambarella.com>

--- a/arch/arm/Kconfig
+++ b/arch/arm/Kconfig
@@ -123,7 +123,7 @@ config GENERIC_IRQ_PROBE
 config GENERIC_LOCKBREAK
 	bool
 	default y
-	depends on SMP && PREEMPT
+	depends on SMP && PREEMPT && !ARCH_AMBARELLA
 
 config RWSEM_GENERIC_SPINLOCK
 	bool
