--- a/arch/arm/configs/ambarella_i1_cortex_defconfig
+++ b/arch/arm/configs/ambarella_i1_cortex_defconfig
@@ -55,7 +55,7 @@ CONFIG_HAVE_GENERIC_HARDIRQS=y
 # IRQ subsystem
 #
 CONFIG_GENERIC_HARDIRQS=y
-# CONFIG_GENERIC_HARDIRQS_NO_DEPRECATED is not set
+CONFIG_GENERIC_HARDIRQS_NO_DEPRECATED=y
 CONFIG_HAVE_SPARSE_IRQ=y
 # CONFIG_GENERIC_PENDING_IRQ is not set
 # CONFIG_AUTO_IRQ_AFFINITY is not set
