Port Audio Driver to 2.6.38 - (3)
Change-Id: If120506aeb22b38563c0ca9c1b1647d47184b482
Signed-off-by: Rong-Rong Cao <rrcao@ambarella.com>

--- a/arch/arm/configs/ambarella_a5s_defconfig
+++ b/arch/arm/configs/ambarella_a5s_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux/arm 2.6.38 Kernel Configuration
-# Fri Mar 18 18:33:56 2011
+# Tue Mar 22 14:37:50 2011
 #
 CONFIG_ARM=y
 CONFIG_HAVE_PWM=y
@@ -1189,8 +1189,7 @@ CONFIG_SND_SOC=m
 CONFIG_SND_AMBARELLA_SOC=m
 CONFIG_SND_AMBARELLA_SOC_I2S=m
 CONFIG_SND_AMBARELLA_BOARD=m
-CONFIG_COCONUT_BOARD=m
-CONFIG_DURIAN_BOARD=m
+CONFIG_A5SEVK_BOARD=m
 CONFIG_AMBARELLA_DUMMY_BOARD=m
 CONFIG_SND_SOC_I2C_AND_SPI=m
 # CONFIG_SND_SOC_ALL_CODECS is not set
