--- a/sound/soc/ambarella/Makefile
+++ b/sound/soc/ambarella/Makefile
@@ -7,16 +7,10 @@ obj-$(CONFIG_SND_AMBARELLA_SOC_I2S)	+= snd-soc-ambarella-i2s.o
 
 # AMBARELLA Machine Support
 snd-soc-ipcam-objs := ipcam.o
-snd-soc-a2sbub-objs := a2sbub.o
-snd-soc-a2sipcam-objs := a2sipcam.o
-snd-soc-coconut-objs := coconut.o
-snd-soc-durian-objs := durian.o
+snd-soc-a5sevk-objs := a5sevk.o
 snd-soc-dummy-objs := dummy.o
 
 obj-$(CONFIG_IPCAM_BOARD)		+= snd-soc-ipcam.o
-obj-$(CONFIG_A2SBUB_BOARD)		+= snd-soc-a2sbub.o
-obj-$(CONFIG_A2SIPCAM_BOARD)		+= snd-soc-a2sipcam.o
-obj-$(CONFIG_COCONUT_BOARD)		+= snd-soc-coconut.o
-obj-$(CONFIG_DURIAN_BOARD)		+= snd-soc-durian.o
+obj-$(CONFIG_A5SEVK_BOARD)		+= snd-soc-a5sevk.o
 obj-$(CONFIG_AMBARELLA_DUMMY_BOARD)	+= snd-soc-dummy.o
 
