--- a/arch/arm/configs/ambarella_a5s_android_defconfig
+++ b/arch/arm/configs/ambarella_a5s_android_defconfig
@@ -1068,7 +1068,7 @@ CONFIG_HW_RANDOM=y
 CONFIG_I2C=y
 CONFIG_I2C_BOARDINFO=y
 CONFIG_I2C_COMPAT=y
-CONFIG_I2C_CHARDEV=m
+CONFIG_I2C_CHARDEV=y
 # CONFIG_I2C_MUX is not set
 # CONFIG_I2C_HELPER_AUTO is not set
 # CONFIG_I2C_SMBUS is not set
@@ -1324,8 +1324,7 @@ CONFIG_SND_SOC=y
 CONFIG_SND_AMBARELLA_SOC=y
 CONFIG_SND_AMBARELLA_SOC_I2S=m
 CONFIG_SND_AMBARELLA_BOARD=y
-CONFIG_COCONUT_BOARD=m
-CONFIG_DURIAN_BOARD=m
+CONFIG_A5SEVK_BOARD=m
 CONFIG_AMBARELLA_DUMMY_BOARD=m
 CONFIG_SND_SOC_I2C_AND_SPI=y
 # CONFIG_SND_SOC_ALL_CODECS is not set
