--- a/arch/arm/configs/ambarella_i1_cortex_android_defconfig
+++ b/arch/arm/configs/ambarella_i1_cortex_android_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux/arm 2.6.38 Kernel Configuration
-# Tue Mar 22 11:05:37 2011
+# Wed Mar 23 17:47:56 2011
 #
 CONFIG_ARM=y
 CONFIG_HAVE_PWM=y
@@ -1354,7 +1354,12 @@ CONFIG_FB_TILEBLITTING=y
 # CONFIG_FB_MB862XX is not set
 CONFIG_FB_AMBARELLA=y
 # CONFIG_FB_BROADSHEET is not set
-# CONFIG_BACKLIGHT_LCD_SUPPORT is not set
+CONFIG_BACKLIGHT_LCD_SUPPORT=y
+# CONFIG_LCD_CLASS_DEVICE is not set
+CONFIG_BACKLIGHT_CLASS_DEVICE=y
+# CONFIG_BACKLIGHT_GENERIC is not set
+CONFIG_BACKLIGHT_PWM=y
+# CONFIG_BACKLIGHT_ADP8860 is not set
 
 #
 # Display device support
