Update CONFIG to build amdroid-jack module
Change-Id: I3e3fdfe71120a37a6ec0b3f074fd54373ba710e3

--- a/arch/arm/configs/ambarella_i1_cortex_android_defconfig
+++ b/arch/arm/configs/ambarella_i1_cortex_android_defconfig
@@ -1690,6 +1690,7 @@ CONFIG_SND_SOC=m
 # CONFIG_SND_SOC_CACHE_LZO is not set
 CONFIG_SND_AMBARELLA_SOC=m
 CONFIG_SND_AMBARELLA_SOC_I2S=m
+CONFIG_SND_AMDROID_JACK=m
 CONFIG_SND_AMBARELLA_BOARD=m
 CONFIG_I1EVK_BOARD=m
 CONFIG_MD800_BOARD=m
