--- a/sound/soc/ambarella/Kconfig
+++ b/sound/soc/ambarella/Kconfig
@@ -11,6 +11,8 @@ config SND_AMBARELLA_SOC_I2S
 
 config SND_AMDROID_JACK
 	tristate
+	tristate "Jack Detection in Amdroid style"
+	depends on PLAT_AMBARELLA && SND_SOC
 	help
 	  Say Y or M if you want to add support for headset/headphone
 	  jack detection in Amdroid style.
@@ -55,7 +57,6 @@ config I1EVK_BOARD
 	select SND_AMBARELLA_SOC_I2S
 	select SND_SOC_WM8994
 	select SND_SOC_AMBARELLA_DUMMY
-	select SND_AMDROID_JACK
 	help
 	  Say Y if you want to add wm8994 audio codec support for
 	  SoC audio on Ambarella I1EVK Board.
