--- a/arch/arm/configs/ambarella_i1_cortex_defconfig
+++ b/arch/arm/configs/ambarella_i1_cortex_defconfig
@@ -1484,6 +1484,7 @@ CONFIG_SND_SOC=m
 # CONFIG_SND_SOC_CACHE_LZO is not set
 CONFIG_SND_AMBARELLA_SOC=m
 CONFIG_SND_AMBARELLA_SOC_I2S=m
+# CONFIG_SND_AMDROID_JACK is not set
 CONFIG_SND_AMBARELLA_BOARD=m
 CONFIG_I1EVK_BOARD=m
 CONFIG_MD800_BOARD=m
@@ -1934,7 +1935,9 @@ CONFIG_FAT_FS=y
 CONFIG_VFAT_FS=y
 CONFIG_FAT_DEFAULT_CODEPAGE=437
 CONFIG_FAT_DEFAULT_IOCHARSET="iso8859-1"
-# CONFIG_NTFS_FS is not set
+CONFIG_NTFS_FS=y
+# CONFIG_NTFS_DEBUG is not set
+CONFIG_NTFS_RW=y
 
 #
 # Pseudo filesystems
