boss: support hardware crypto engine.
Change-Id: I776803bd91410cd2a8148e18e8ca989a1a3369e5

--- a/arch/arm/mach-ambarella/Kconfig
+++ b/arch/arm/mach-ambarella/Kconfig
@@ -253,7 +253,7 @@ config PLAT_AMBARELLA_S2_CORTEX
 	select PLAT_AMBARELLA_CORTEX_SMP if !PLAT_AMBARELLA_AMBALINK
 	select PLAT_AMBARELLA_CORTEX_BST if !PLAT_AMBARELLA_AMBALINK
 	select PLAT_AMBARELLA_MEM_START_LOW
-	select PLAT_AMBARELLA_SUPPORT_HW_CRYPTO if !PLAT_AMBARELLA_AMBALINK
+	select PLAT_AMBARELLA_SUPPORT_HW_CRYPTO
 	select PLAT_AMBARELLA_SUPPORT_MMAP_AXI
 	select ARM_ERRATA_754322
 	select ARM_ERRATA_764369 if SMP
@@ -311,7 +311,7 @@ config PLAT_AMBARELLA_S2L
 	select PLAT_AMBARELLA_SUPPORT_MMAP_DRAMC if !PLAT_AMBARELLA_AMBALINK
 	select PLAT_AMBARELLA_SUPPORT_MMAP_DBGBUS
 	select PLAT_AMBARELLA_SUPPORT_VIC
-	select PLAT_AMBARELLA_SUPPORT_HW_CRYPTO if !PLAT_AMBARELLA_AMBALINK
+	select PLAT_AMBARELLA_SUPPORT_HW_CRYPTO
 	select USB_ARCH_HAS_EHCI if USB_SUPPORT
 	select USB_ARCH_HAS_OHCI if USB_SUPPORT
 	select PLAT_AMBARELLA_SUPPORT_IOMUX
