--- a/arch/arm64/configs/ambarella_h2_ambalink_defconfig
+++ b/arch/arm64/configs/ambarella_h2_ambalink_defconfig
@@ -139,6 +139,7 @@ CONFIG_HID=m
 CONFIG_USB=m
 CONFIG_USB_EHCI_HCD=m
 CONFIG_USB_EHCI_ROOT_HUB_TT=y
+CONFIG_USB_EHCI_AMBARELLA=m
 CONFIG_USB_OHCI_HCD=m
 CONFIG_USB_OHCI_AMBARELLA=y
 CONFIG_USB_STORAGE=m
