add ppm device support
Change-Id: I295acbc37c3638056c1d7dfd6d4a8d996493a8b0

--- a/drivers/ambalink/service/Kconfig
+++ b/drivers/ambalink/service/Kconfig
@@ -14,3 +14,8 @@ config AMBALINK_SD
         help
           AmbaLink SD controller RPMSG host driver.
 
+config AMBALINK_PPM
+        tristate "AmbaLink PPM device"
+	default n
+	help 
+	  create /dev/ppm to mmap physical memory 
