--- a/drivers/ambalink/service/Makefile
+++ b/drivers/ambalink/service/Makefile
@@ -9,5 +9,7 @@ obj-$(CONFIG_AMBALINK_LINKCTRL)	+= rpmsg_linkctrl.o
 
 obj-$(CONFIG_AMBALINK_SD) 	+= rpmsg_sd.o
 
+obj-$(CONFIG_AMBALINK_PPM)      += ppm.o
+
 obj-$(CONFIG_HIBERNATION) 	+= hibernate.o
 
