redesign suspend to memory: distinguish between pwc and gpio
Change-Id: I96ef932714b966aec2747e27bcff8ffb0419fad0

--- a/arch/arm/configs/ambarella_s2l_defconfig
+++ b/arch/arm/configs/ambarella_s2l_defconfig
@@ -402,6 +402,7 @@ CONFIG_AMBARELLA_TIMER_HZ=100
 CONFIG_AMBARELLA_TIMER_HIGHRES=y
 CONFIG_AMBARELLA_EXT_IRQ_NUM=16
 CONFIG_AMBARELLA_EXT_GPIO_NUM=16
+CONFIG_AMBARELLA_SREF_FIFO_EXEC=y
 CONFIG_GPIO_PCA953X=y
 # CONFIG_KEYBOARD_GPIO_POLLED is not set
 # CONFIG_PLAT_SPEAR is not set
