cv22:add vout mipi dsi rct register
Change-Id: I511024050fb8de9f02780dd1e17886bc1e812bf5

--- a/arch/arm64/boot/dts/ambarella/ambarella-cv22.dtsi
+++ b/arch/arm64/boot/dts/ambarella/ambarella-cv22.dtsi
@@ -1030,6 +1030,7 @@
 			compatible = "ambarella,voutc";
 			interrupts = <0 89 0x1>;
 			interrupt-names = "vout0";
+			rct-regmap = <&rct_syscon>;
 		};
 
 		/* node for vout1(lcd) controller */
@@ -1037,6 +1038,7 @@
 			compatible = "ambarella,voutc";
 			interrupts = <0 88 0x1>;
 			interrupt-names = "vout1";
+			rct-regmap = <&rct_syscon>;
 		};
 
 	};
@@ -1051,14 +1053,12 @@
 			reg = <0>;
 		};
 
-		/*
 		framebuffer0: framebuffer@0 {
 			compatible = "ambarella,fb";
 			reg = <0>;
 			amb,vout-id = <0>;
 			amb,format = "rgb565";
 		};
-		*/
 
 		framebuffer1: framebuffer@1 {
 			compatible = "ambarella,fb";
