--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -18,18 +18,26 @@ architectures:
     run-on: arm64
 
 parts:
-  kernel:
-    plugin: kernel
-    source: .
-    source-type: git
-    kconfigflavour: generic
-    kconfigs:
-      - CONFIG_DEBUG_INFO=n
-    override-build: |
-      cp debian/scripts/retpoline-extract-one \
-        $SNAPCRAFT_PART_BUILD/scripts/ubuntu-retpoline-extract-one
-      snapcraftctl build
-    kernel-with-firmware: false
+    kernel:
+        after:
+            - firmware
+        plugin: kernel
+        source: .
+        kdefconfig: [ "snappy_defconfig" ]
+        kernel-with-firmware: false
+        kernel-image-target: zImage
+        override-build: |
+            snapcraftctl build
+            mkdir -p ${SNAPCRAFT_PART_INSTALL}/lib
+            ln -sf ../modules ${SNAPCRAFT_PART_INSTALL}/lib/modules
+        stage:
+            - System.map-*
+            - config-*
+            - dtbs
+            - initrd.img
+            - kernel.img
+            - lib
+            - modules
 
     firmware:
         plugin: nil
