UBUNTU: SAUCE: snap: firmware: add wireless-regdb
Signed-off-by: Ondrej Kubik <ondrej.kubik@canonical.com>

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -41,6 +41,7 @@ parts:
     firmware:
         plugin: nil
         stage-packages:
+            - wireless-regdb
             - linux-firmware
         override-build: |
             snapcraftctl build
