--- a/arch/arm64/boot/dts/freescale/imx8mp-35som.dts
+++ b/arch/arm64/boot/dts/freescale/imx8mp-35som.dts
@@ -249,6 +249,13 @@
 	status = "disable";
 };
 
+/* Beeper */
+&pwm3 {
+        pinctrl-names = "default";
+        pinctrl-0 = <&pinctrl_pwm3>;
+        status = "okay";
+};
+
 &pwm4 {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_pwm4>;
@@ -934,6 +941,12 @@
 		fsl,pins = <
 			MX8MP_IOMUXC_GPIO1_IO11__PWM2_OUT	0x116
 		>;
+	};
+
+        pinctrl_pwm3: pwm3grp {
+                fsl,pins = <
+                        MX8MP_IOMUXC_GPIO1_IO10__PWM3_OUT       0x116
+                >;
 	};
 
 	pinctrl_pwm4: pwm4grp {
